--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
-# Multi-stage build for production
-FROM node:18-alpine as build
+# ======= Stage 1: Build React App =======
+FROM node:20-alpine as build
 
 # Set working directory
 WORKDIR /app
@@ -13,33 +13,31 @@ RUN npm install
 # Copy source code
 COPY . .
 
-# Build the app
+# Build the app (React builds to /app/build)
 RUN npm run build
 
-# Production stage
+
+# ======= Stage 2: Serve with Nginx =======
 FROM nginx:alpine
 
-# Copy custom nginx config
+# Copy custom Nginx config (optional)
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy built app from build stage
+# Copy build output from previous stage
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Create non-root user
-RUN addgroup -g 1001 -S nginx && \
-    adduser -S nginx -u 1001 -G nginx
-
-# Change ownership
+# Set correct permissions (optional, for logging/writing if needed)
+# Nginx user already exists; no need to recreate
 RUN chown -R nginx:nginx /usr/share/nginx/html && \
     chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /var/log/nginx && \
     chown -R nginx:nginx /etc/nginx/conf.d
 
-# Switch to non-root user
+# Use non-root user already defined in nginx image
 USER nginx
 
-# Expose port
-EXPOSE 3000
+# Expose port 80 (React is typically served on port 80)
+EXPOSE 80
 
-# Start nginx
+# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
