--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -28,4 +28,4 @@ USER nodejs
 EXPOSE 3000
 
 # Start the app
-CMD ["serve", "-s", "build", "-l", "0.0.0.0:3000"]
+CMD ["serve", "-s", "build", "-l", "http://0.0.0.0:3000"]
