--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,32 +1,29 @@
-# Stage 1: Build React app
-FROM node:18-alpine AS builder
-
+# Stage 1: Build the React app
+FROM node:18-alpine AS build
 WORKDIR /app
 
 # Install dependencies
 COPY package*.json ./
 RUN npm install
 
-# Copy app source
+# Copy source code and build
 COPY . .
-
-# Build the React app
 RUN npm run build
 
-# Stage 2: Serve with nginx
+# Stage 2: Serve using Nginx
 FROM nginx:alpine
 
-# Remove default index
+# Remove default Nginx static assets
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copy built React app
-COPY --from=builder /app/build /usr/share/nginx/html
+# Copy custom nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy custom nginx config if you have it
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copy build artifacts from React build stage
+COPY --from=build /app/build /usr/share/nginx/html
 
-# Expose default nginx port
+# Expose port (80 is standard for Nginx)
 EXPOSE 80
 
-# Start Nginx
+# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
