--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,52 @@
-version: '3.8'
-
 services:
   mongodb:
     image: mongo:6.0
-    container_name: mongodb
+    container_name: devops-mongodb
+    restart: unless-stopped
+    ports:
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: password123
-    ports:
-      - "27017:27017"
+      MONGO_INITDB_DATABASE: devops-journey
     volumes:
       - mongodb_data:/data/db
+    networks:
+      - devops-network
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   backend:
     build: ./backend
     container_name: backend
-    environment:
-      - PORT=5000
-      - MONGO_URI=mongodb://admin:password123@mongodb:27017/devops?authSource=admin
+    restart: unless-stopped
     ports:
       - "5000:5000"
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
+    environment:
+      MONGODB_URI: mongodb://admin:password123@mongodb:27017/devops-journey?authSource=admin
+    networks:
+      - devops-network
 
   frontend:
     build: ./frontend
     container_name: frontend
+    restart: unless-stopped
     ports:
       - "3000:80"
     depends_on:
       - backend
+    networks:
+      - devops-network
 
 volumes:
   mongodb_data:
+
+networks:
+  devops-network:
+    driver: bridge
