--- a/k8s-manifests/frontend.yaml
+++ b/k8s-manifests/frontend.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: rajeshsvrn/devops-frontend:latest # Update with your image
+          image: devopsjourney.azurecr.io/devops-frontend:v1 # Update with your image
           ports:
             - containerPort: 80
           env:
