--- a/k8s-manifests/backend.yaml
+++ b/k8s-manifests/backend.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: devopsjourney.azurecr.io/devops-frontend:v1 # Update with your image
+          image: devopsjourney.azurecr.io/devops-backend:v1 # Update with your image
           ports:
             - containerPort: 5000
           env:
