--- a/k8s-manifests/frontend.yaml
+++ b/k8s-manifests/frontend.yaml
@@ -13,6 +13,8 @@ spec:
       labels:
         app: frontend
     spec:
+      imagePullSecrets:
+        - name: acr-token-auth # Ensure this secret exists for ACR authentication
       containers:
         - name: frontend
           image: devopsjourney.azurecr.io/devops-frontend:v1 # Update with your image
