--- a/k8s-manifests/backend.yaml
+++ b/k8s-manifests/backend.yaml
@@ -14,7 +14,7 @@ spec:
         app: backend
     spec:
       imagePullSecrets:
-        - name: acr-token-auth
+        - name: acr-admin-creds
       containers:
         - name: backend
           image: devopsjourney.azurecr.io/devops-backend:v1 # Update with your image
