--- a/k8s-manifests/backend.yaml
+++ b/k8s-manifests/backend.yaml
@@ -29,18 +29,18 @@ spec:
               value: "your-secret-key" # We'll move this to secrets later
             - name: PORT
               value: "5000"
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: 5000
-            initialDelaySeconds: 30
-            periodSeconds: 10
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: 5000
-            initialDelaySeconds: 5
-            periodSeconds: 5
+          # livenessProbe:
+          #   httpGet:
+          #     path: /health
+          #     port: 5000
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 10
+          # readinessProbe:
+          #   httpGet:
+          #     path: /health
+          #     port: 5000
+          #   initialDelaySeconds: 5
+          #   periodSeconds: 5
           resources:
             requests:
               memory: "128Mi"
