--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,8 +10,8 @@ server {
     }
 
     location /api {
-        # proxy_pass http://backend:5000;
-        proxy_pass http://backend.dev.svc.cluster.local:5000;
+        proxy_pass http://backend:5000;
+        # proxy_pass http://backend.dev.svc.cluster.local:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
