update config map and secret

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,15 +9,15 @@ server {
         try_files $uri /index.html;
     }
 
-    location /api {
-        proxy_pass http://backend:5000;
-        # proxy_pass http://backend.dev.svc.cluster.local:5000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+    # location /api {
+    #     proxy_pass http://backend:5000;
+    #     # proxy_pass http://backend.dev.svc.cluster.local:5000;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection 'upgrade';
+    #     proxy_set_header Host $host;
+    #     proxy_cache_bypass $http_upgrade;
+    # }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
