--- a/k8s-manifests/ingress.yaml
+++ b/k8s-manifests/ingress.yaml
@@ -4,13 +4,13 @@ metadata:
   name: devops-app-ingress
   namespace: dev
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /api
+          - path: /api(/|$)(.*)
             pathType: Prefix
             backend:
               service:
