--- a/k8s-manifests/ingress.yaml
+++ b/k8s-manifests/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: dev
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
