--- a/k8s-manifests/ingress.yaml
+++ b/k8s-manifests/ingress.yaml
@@ -8,7 +8,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - http:
+    - host: devopsprac.duckdns.org
+      http:
         paths:
           - path: /api/(.*)
             pathType: Prefix
