--- a/k8s-manifests/ingress.yaml
+++ b/k8s-manifests/ingress.yaml
@@ -4,21 +4,22 @@ metadata:
   name: devops-app-ingress
   namespace: dev
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
     - host: devopsprac.duckdns.org
       http:
         paths:
-          - path: /api/(.*)
+          - path: /api(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: backend
                 port:
                   number: 5000
-          - path: /
+          - path: /(.*)
             pathType: Prefix
             backend:
               service:
