update ingress host name

--- a/k8s-manifests/ingress.yaml
+++ b/k8s-manifests/ingress.yaml
@@ -6,24 +6,20 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "$http_origin"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
 spec:
   ingressClassName: nginx
   rules:
     - host: devopsprac.duckdns.org
       http:
         paths:
-          - path: /api(/|$)(.*) # Matches /api and /api/anything
+          - path: /api(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: backend
                 port:
                   number: 5000
-          - path: /(.*) # Matches all other paths
+          - path: /(.*)
             pathType: Prefix
             backend:
               service:
