--- a/k8s-manifests/mongodb.yaml
+++ b/k8s-manifests/mongodb.yaml
@@ -55,3 +55,117 @@ spec:
         - name: mongodb-storage
           emptyDir: {} # Simple empty directory, data lost on pod restart
       serviceAccountName: mongodb-sa
+
+---
+# mongodb-complete.yaml
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongodb-pvc
+  namespace: dev
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+  storageClassName: "local-path" # Use your available storage class
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mongodb
+  namespace: dev
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: mongodb
+  template:
+    metadata:
+      labels:
+        app: mongodb
+    spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 999
+        runAsGroup: 999
+        fsGroup: 999
+        seccompProfile:
+          type: RuntimeDefault
+      containers:
+        - name: mongodb
+          image: mongo:6.0
+          ports:
+            - containerPort: 27017
+              name: mongodb
+          env:
+            - name: MONGO_INITDB_DATABASE
+              value: "devops-app"
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: false # MongoDB needs to write to /tmp
+            runAsNonRoot: true
+            runAsUser: 999
+            runAsGroup: 999
+            capabilities:
+              drop:
+                - ALL
+          volumeMounts:
+            - name: mongodb-storage
+              mountPath: /data/db
+            - name: tmp-volume
+              mountPath: /tmp
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+          # Add health checks
+          livenessProbe:
+            exec:
+              command:
+                - mongosh
+                - --eval
+                - "db.adminCommand('ping')"
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            exec:
+              command:
+                - mongosh
+                - --eval
+                - "db.adminCommand('ping')"
+            initialDelaySeconds: 5
+            periodSeconds: 5
+      volumes:
+        - name: mongodb-storage
+          persistentVolumeClaim:
+            claimName: mongodb-pvc
+        - name: tmp-volume
+          emptyDir: {}
+      serviceAccountName: mongodb-sa
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb
+  namespace: dev
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "27017"
+    prometheus.io/path: "/metrics"
+  labels:
+    app: mongodb
+spec:
+  selector:
+    app: mongodb
+  ports:
+    - name: mongodb
+      port: 27017
+      targetPort: 27017
+      protocol: TCP
+  type: ClusterIP
