--- a/k8s-manifests/frontend.yaml
+++ b/k8s-manifests/frontend.yaml
@@ -21,11 +21,20 @@ spec:
         seccompProfile:
           type: RuntimeDefault
 
-      volumes:
+        volumeMounts:
+        # Essential nginx directories that need write access
         - name: nginx-cache
-          emptyDir: {}
-        - name: nginx-tmp
-          emptyDir: {}
+          mountPath: /var/cache/nginx
+        - name: nginx-run
+          mountPath: /var/run
+        - name: tmp-volume
+          mountPath: /tmp
+
+# Custom nginx config (optional)
+        - name: nginx-config
+          mountPath: /etc/nginx/conf.d/default.conf
+          subPath: default.conf
+          readOnly: true          
 
       imagePullSecrets:
         - name: acr-admin-creds # Ensure this secret exists for ACR authentication
@@ -66,6 +75,18 @@ spec:
             limits:
               memory: "128Mi"
               cpu: "100m"
+
+      volumes:
+      - name: nginx-cache
+        emptyDir: {}
+      - name: nginx-run
+        emptyDir: {}
+      - name: tmp-volume
+        emptyDir: {}
+      - name: nginx-config
+        configMap:
+          name: frontend-nginx-config
+
 
       serviceAccountName: frontend-sa
 ---
