--- a/k8s-manifests/frontend.yaml
+++ b/k8s-manifests/frontend.yaml
@@ -21,29 +21,37 @@ spec:
         seccompProfile:
           type: RuntimeDefault
 
-        volumeMounts:
-          # Essential nginx directories that need write access
-          - name: nginx-cache
-            mountPath: /var/cache/nginx
-          - name: nginx-run
-            mountPath: /var/run
-          - name: tmp-volume
-            mountPath: /tmp
-
-          # Custom nginx config (optional)
-          - name: nginx-config
-            mountPath: /etc/nginx/conf.d/default.conf
-            subPath: default.conf
-            readOnly: true
+      volumes:
+        - name: nginx-cache
+          emptyDir: {}
+        - name: nginx-run
+          emptyDir: {}
+        - name: tmp-volume
+          emptyDir: {}
+        - name: nginx-config
+          configMap:
+            name: frontend-nginx-config
 
       imagePullSecrets:
-        - name: acr-admin-creds # Ensure this secret exists for ACR authentication
+        - name: acr-admin-creds
       containers:
         - name: frontend
-          image: devopsjourney.azurecr.io/devops-frontend:v4 # Update with your image
+          image: devopsjourney.azurecr.io/devops-frontend:v4
           ports:
             - containerPort: 80
-
+          volumeMounts:
+            # Essential nginx directories that need write access
+            - name: nginx-cache
+              mountPath: /var/cache/nginx
+            - name: nginx-run
+              mountPath: /var/run
+            - name: tmp-volume
+              mountPath: /tmp
+            # Custom nginx config (optional)
+            - name: nginx-config
+              mountPath: /etc/nginx/conf.d/default.conf
+              subPath: default.conf
+              readOnly: true
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
@@ -76,17 +84,6 @@ spec:
               memory: "128Mi"
               cpu: "100m"
 
-      volumes:
-        - name: nginx-cache
-          emptyDir: {}
-        - name: nginx-run
-          emptyDir: {}
-        - name: tmp-volume
-          emptyDir: {}
-        - name: nginx-config
-          configMap:
-            name: frontend-nginx-config
-
       serviceAccountName: frontend-sa
 ---
 apiVersion: v1
@@ -105,4 +102,3 @@ spec:
     - port: 80
       targetPort: 80
   type: ClusterIP
-  # NodePort will be assigned automatically (30000-32767)
