updated frontend config for readonly file issue

--- a/k8s-manifests/frontend.yaml
+++ b/k8s-manifests/frontend.yaml
@@ -30,7 +30,7 @@ spec:
           emptyDir: {}
         - name: nginx-config
           configMap:
-            name: frontend-nginx-config
+            name: frontend-config
 
       imagePullSecrets:
         - name: acr-admin-creds
