--- a/k8s-manifests/frontend.yaml
+++ b/k8s-manifests/frontend.yaml
@@ -12,14 +12,14 @@ spec:
     metadata:
       labels:
         app: frontend
-    spec:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 101
-        runAsGroup: 101
-        fsGroup: 101
-        seccompProfile:
-          type: RuntimeDefault
+      # spec:
+      #   securityContext:
+      #     runAsNonRoot: true
+      #     runAsUser: 101
+      #     runAsGroup: 101
+      #     fsGroup: 101
+      #     seccompProfile:
+      #       type: RuntimeDefault
 
       imagePullSecrets:
         - name: acr-admin-creds # Ensure this secret exists for ACR authentication
@@ -29,15 +29,15 @@ spec:
           ports:
             - containerPort: 80
 
-          securityContext:
-            allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: false
-            runAsNonRoot: true
-            runAsUser: 101
-            runAsGroup: 101
-            capabilities:
-              drop:
-                - ALL
+          # securityContext:
+          #   allowPrivilegeEscalation: false
+          #   readOnlyRootFilesystem: false
+          #   runAsNonRoot: true
+          #   runAsUser: 101
+          #   runAsGroup: 101
+          #   capabilities:
+          #     drop:
+          #       - ALL
           env:
             - name: REACT_APP_API_URL
               value: "http://backend:5000/api"
