reversed frontend and mongodb

--- a/k8s-manifests/frontend.yaml
+++ b/k8s-manifests/frontend.yaml
@@ -12,7 +12,7 @@ spec:
     metadata:
       labels:
         app: frontend
-      # spec:
+    spec:
       #   securityContext:
       #     runAsNonRoot: true
       #     runAsUser: 101
