--- a/k8s-manifests/prometheus-values.yaml
+++ b/k8s-manifests/prometheus-values.yaml
@@ -1,9 +1,10 @@
+# prometheus-values.yaml
 prometheus:
   prometheusSpec:
     storageSpec:
       volumeClaimTemplate:
         spec:
-          storageClassName: "standard"
+          storageClassName: "standard" # Change if needed
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
@@ -20,35 +21,37 @@ prometheus:
 
 grafana:
   enabled: true
-  adminPassword: "admin123" # Change this!
+  adminPassword: "StrongPassword@123" # Change this!
   persistence:
     enabled: true
+    storageClassName: "standard" # Change if needed
     size: 10Gi
   resources:
     requests:
-      memory: 256Mi
-      cpu: 100m
-    limits:
       memory: 512Mi
       cpu: 200m
+    limits:
+      memory: 1Gi
+      cpu: 500m
 
 alertmanager:
+  enabled: true
   alertmanagerSpec:
     storage:
       volumeClaimTemplate:
         spec:
-          storageClassName: "standard"
+          storageClassName: "standard" # Change if needed
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
               storage: 10Gi
     resources:
       requests:
-        memory: 256Mi
-        cpu: 100m
-      limits:
         memory: 512Mi
         cpu: 200m
+      limits:
+        memory: 1Gi
+        cpu: 500m
 
 nodeExporter:
   enabled: true
@@ -56,37 +59,11 @@ nodeExporter:
 kubeStateMetrics:
   enabled: true
 
-defaultRules:
-  create: true
-  rules:
-    alertmanager: true
-    etcd: true
-    configReloaders: true
-    general: true
-    k8s: true
-    kubeApiserverAvailability: true
-    kubeApiserverBurnrate: true
-    kubeApiserverHistogram: true
-    kubeApiserverSlos: true
-    kubelet: true
-    kubeProxy: true
-    kubePrometheusGeneral: true
-    kubePrometheusNodeRecording: true
-    kubernetesApps: true
-    kubernetesResources: true
-    kubernetesStorage: true
-    kubernetesSystem: true
-    node: true
-    nodeExporterAlerting: true
-    nodeExporterRecording: true
-    prometheus: true
-    prometheusOperator: true
-
 prometheusOperator:
   resources:
     requests:
-      memory: 256Mi
-      cpu: 100m
-    limits:
       memory: 512Mi
       cpu: 200m
+    limits:
+      memory: 1Gi
+      cpu: 500m
