--- a/k8s-manifests/loki-values.yaml
+++ b/k8s-manifests/loki-values.yaml
@@ -1,44 +1,44 @@
 loki:
-  config:
-    storage_config:
-      boltdb_shipper:
-        active_index_directory: /loki/boltdb-shipper-active
-        cache_location: /loki/boltdb-shipper-cache
-        shared_store: filesystem # For production, use S3/GCS
-      filesystem:
-        directory: /loki/chunks
-    schema_config:
-      configs:
-        - from: 2020-10-24
-          store: boltdb-shipper
-          object_store: filesystem
-          schema: v11
-          index:
-            prefix: index_
-            period: 24h
-  persistence:
-    enabled: false # Disable persistence for Loki
-    storageClassName: "standard" # Change if needed
-    size: 50Gi
-  resources:
-    requests:
-      memory: 1Gi
-      cpu: 500m
-    limits:
-      memory: 2Gi
-      cpu: 1000m
+      config:
+        storage_config:
+          boltdb_shipper:
+            active_index_directory: /loki/boltdb-shipper-active
+            cache_location: /loki/boltdb-shipper-cache
+            shared_store: filesystem
+          filesystem:
+            directory: /loki/chunks
+        schema_config:
+          configs:
+            - from: 2020-10-24
+              store: boltdb-shipper
+              object_store: filesystem
+              schema: v11
+              index:
+                prefix: index_
+                period: 24h
+      persistence:
+        enabled: true
+        size: 50Gi
+        storageClassName: "standard"
+      resources:
+        requests:
+          memory: 1Gi
+          cpu: 500m
+        limits:
+          memory: 2Gi
+          cpu: 1000m
 
-promtail:
-  enabled: true
-  config:
-    logLevel: info
-    serverPort: 3101
-    clients:
-      - url: http://loki:3100/loki/api/v1/push
-  resources:
-    requests:
-      memory: 256Mi
-      cpu: 100m
-    limits:
-      memory: 512Mi
-      cpu: 200m
+    promtail:
+      enabled: true
+      resources:
+        requests:
+          memory: 128Mi
+          cpu: 100m
+        limits:
+          memory: 256Mi
+          cpu: 200m
+      config:
+        logLevel: info
+        serverPort: 3101
+        clients:
+          - url: http://loki:3100/loki/api/v1/push
