alert and grafana ingress

--- a/k8s-manifests/grafana-ingress.yaml
+++ b/k8s-manifests/grafana-ingress.yaml
@@ -11,10 +11,10 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - grafana.duckdns.org # Replace with your DuckDNS domain
+        - granfana.duckdns.org # Replace with your DuckDNS domain
       secretName: grafana-tls
   rules:
-    - host: grafana.duckdns.org # Replace with your DuckDNS domain
+    - host: granfana.duckdns.org # Replace with your DuckDNS domain
       http:
         paths:
           - path: /
