--- a/k8s-manifests/grafana-ingress.yaml
+++ b/k8s-manifests/grafana-ingress.yaml
@@ -1,20 +1,14 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: v1
+kind: Service
 metadata:
-  name: grafana-ingress
+  name: grafana-nodeport
   namespace: monitoring
-  annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-  ingressClassName: nginx
-  rules:
-    - host: granfana.duckdns.org
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: prometheus-grafana
-                port:
-                  number: 80
+  type: NodePort
+  ports:
+    - port: 80
+      targetPort: 3000
+      nodePort: 31000 # Choose an available port 30000-32767
+  selector:
+    app.kubernetes.io/name: grafana
+    app.kubernetes.io/instance: prometheus
