--- a/k8s-manifests/prometheus-values.yaml
+++ b/k8s-manifests/prometheus-values.yaml
@@ -19,9 +19,7 @@ grafana:
   # Expose Grafana via NodePort
   service:
     type: NodePort
-    nodePort: 32000
-    port: 80
-    targetPort: 3000
+    nodePort: 32000 # Fixed port for easy access
 
   # No persistence for simplicity
   persistence:
