--- a/devops-gitops/helm-charts/devops-app/templates/backend/deployment.yaml
+++ b/devops-gitops/helm-charts/devops-app/templates/backend/deployment.yaml
@@ -1,4 +1,3 @@
-# helm-charts/devops-app/templates/backend/deployment.yaml
 {{- if .Values.backend.enabled }}
 apiVersion: apps/v1
 kind: Deployment
@@ -13,60 +12,57 @@ spec:
   selector:
     matchLabels:
       {{- include "devops-app.selectorLabels" . | nindent 6 }}
-      app.kubernetes.io/component: {{ .Values.backend.name }}
+      app: {{ .Values.backend.name }}
   template:
     metadata:
       labels:
         {{- include "devops-app.selectorLabels" . | nindent 8 }}
-        app.kubernetes.io/component: {{ .Values.backend.name }}
-        app: {{ .Values.backend.name }}  # For compatibility with existing services
+        app: {{ .Values.backend.name }}
     spec:
       securityContext:
         {{- toYaml .Values.backend.securityContext | nindent 8 }}
-      serviceAccountName: {{ .Values.backend.name }}-sa
+      {{- if .Values.global.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml .Values.global.imagePullSecrets | nindent 8 }}
+      {{- end }}
+      serviceAccountName: {{ .Values.backend.serviceAccount.name }}
       containers:
       - name: {{ .Values.backend.name }}
-        image: "{{ .Values.global.imageRegistry }}/{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag | default .Values.global.imageTag }}"
+        image: "{{ .Values.global.imageRegistry }}/{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
         imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.backend.service.targetPort }}
-          name: http
-        env:
-        - name: NODE_ENV
-          value: {{ .Values.backend.config.nodeEnv }}
-        - name: PORT
-          value: "{{ .Values.backend.config.port }}"
-        - name: LOG_LEVEL
-          value: {{ .Values.backend.config.logLevel }}
-        # Environment variables from ConfigMap
         envFrom:
         - configMapRef:
             name: {{ .Values.backend.name }}-config
-        # Secrets (will be added in afternoon session)
+        env:
+        {{- if .Values.backend.secrets.enabled }}
+        - name: {{ .Values.backend.secrets.jwtSecretKey }}
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Values.backend.name }}-secrets
+              key: {{ .Values.backend.secrets.jwtSecretKey }}
+        - name: {{ .Values.backend.secrets.mongoUriKey }}
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Values.backend.name }}-secrets
+              key: {{ .Values.backend.secrets.mongoUriKey }}
+        {{- end }}
+        {{- if .Values.backend.jaeger.enabled }}
+        # Jaeger Tracing Configuration
+        - name: JAEGER_SERVICE_NAME
+          value: {{ .Values.backend.jaeger.serviceName }}
+        - name: JAEGER_AGENT_HOST
+          value: {{ .Values.backend.jaeger.agentHost }}
+        - name: JAEGER_AGENT_PORT
+          value: {{ .Values.backend.jaeger.agentPort }}
+        - name: JAEGER_SAMPLER_TYPE
+          value: {{ .Values.backend.jaeger.samplerType }}
+        - name: JAEGER_SAMPLER_PARAM
+          value: {{ .Values.backend.jaeger.samplerParam }}
+        {{- end }}
         securityContext:
           {{- toYaml .Values.backend.containerSecurityContext | nindent 12 }}
-        volumeMounts:
-        - name: tmp-volume
-          mountPath: /tmp
-        - name: app-logs
-          mountPath: /app/logs
         resources:
           {{- toYaml .Values.backend.resources | nindent 12 }}
-        livenessProbe:
-          httpGet:
-            path: /api/health
-            port: http
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /api/health
-            port: http
-          initialDelaySeconds: 5
-          periodSeconds: 5
-      volumes:
-      - name: tmp-volume
-        emptyDir: {}
-      - name: app-logs
-        emptyDir: {}
 {{- end }}
